k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advert-front
  namespace: advert-front
  labels:
    app: advert-front
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: advert-front
  template:
    metadata:
      labels:
        app: advert-front
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: advert-front
          image: ghcr.io/nulp-ai-enterprise/advert-front:sha-487a417
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
