k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: advert-front
  namespace: advert-front
  labels:
    app: advert-front
spec:
  type: ClusterIP
  selector:
    app: advert-front
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
